[tool.poetry]
name = "keeperbot"
version = "0.1.0"
description = "A bot that keeps the information you provide and then answers your questions." 
authors = ["Atilio Pereira <atiliopereira@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.9"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
langchain = "^0.3.24"
chromadb = "^1.0.7"
pypdf = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=2.1.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"
